# pgn-filter

./: LICENSE  README.md  pyproject.toml
examples/: d4_games.py
search/: __main__.py  search.py
